package com.example.school.entities.enums;

public enum Breed {
    PONY,
    NORMAL_HORSE,
    UNICORN

}
