package com.example.school.entities.enums;

public enum TeacherType {
    JUMPING_TRAINER,
    DRESSAGE_TRAINER,
    RACING_TRAINER,
    RIDING_INSTRUCTOR,
    POLO_TRAINER
}
