package com.example.school.entities.enums;

public enum UserType {
    STUDENT,
    TEACHER,
    ADMIN,
    USER
}
